Fixed dark mode

--- a/src/app/presentation/pages/match-detail/match-detail.page.scss
+++ b/src/app/presentation/pages/match-detail/match-detail.page.scss
@@ -45,7 +45,6 @@ ion-card-content {
   font-size: 24px;
   font-style: normal;
   text-transform: uppercase;
-  color: #31404b;
   font-weight: 700;
   font-family: Montserrat,sans-serif;
   letter-spacing: -.02em;
